feature/VGCA-18 Разработка интеграционных тестов контроллера